# program-synthesis

./: .gitignore  README.md  pyproject.toml
notebooks/: abn_experiments.ipynb  model_experiments.ipynb  senn_experiments.ipynb
src/animcl/: data.py
src/animcl/models/: attbranchnet.py
src/animcl/models/protonet/: data.py  engine.py  model.py  train.py
